bee-common/bee-common-derive/tests/packable/fail/missing_ty_enum.stderr
error: Enums that derive `Packable` require a `#[packable(tag_ty = ...)]` attribute.
  --> $DIR/missing_ty_enum.rs:12:10
   |
12 | pub enum OptI32 {
   |          ^^^^^^
